# scout-plugin

./: .gitignore  README.md  plugin.json
.github/workflows/: lint.yml  test.yml
commands/: scout-meta-review.md  scout-setup.md  scout-status.md  scout-work.md
docs/: FOLLOWUPS.md  README.md
docs/plans/: 2026-04-24-plan-1-engine-scaffolding.md
docs/specs/: 2026-04-24-scout-unification-design.md
engine/: README.md  pyproject.toml
engine/scout/: __init__.py  __main__.py  cli.py  config.py  errors.py  events.py  id_map.py  ids.py  manifest.py  paths.py
engine/scout/action_items/: __init__.py  _common.py  add_comment.py  cli.py  diff.py  list.py  mark_done.py  parser.py  render.py  snooze.py  watch.py  writer.py
engine/scout/defaults/: scout-config.yaml
engine/scout/kb/: __init__.py  ontology.py  paths.py  schema.yaml
engine/scout/tui/: app.py  config.py
engine/scout/tui/screens/: context.py  dashboard.py  note_modal.py  spawn.py
engine/tests/: conftest.py
engine/tests/concurrency/: test_id_map_concurrent.py
engine/tests/fixtures/: action-items-sample.md  action-items-with-prefixes.md
engine/tests/fixtures/kb-sample/people/: jordan.md
engine/tests/integration/: test_action_items_cli.py  test_action_items_watch.py  test_schema_parity.py
engine/tests/perf/: test_no_heavy_imports.py  test_startup.py
engine/tests/smoke/: test_wheel_install.py
engine/tests/unit/: test_action_items_add_comment.py  test_action_items_cli.py  test_action_items_common.py  test_action_items_diff.py  test_action_items_list.py  test_action_items_mark_done.py  test_action_items_parser.py  test_action_items_render.py  test_action_items_render_changes.py  test_action_items_snooze.py  test_action_items_watch.py  test_action_items_writer.py  test_cli.py  test_config.py  test_errors.py  test_events.py  test_id_map.py  test_ids.py  test_kb_ontology.py  test_manifest.py  test_paths.py  test_tui_smoke.py
phases/connectors/: calendar.md  claude-sessions.md  drive.md  email.md  github.md  granola.md  linear.md  slack.md
phases/core/: action-items.md  git-setup.md  kb-management.md
phases/modes/: feedback-processing.md  kb-deep-work.md  wishlist.md
phases/research/: commit-notify.md  deep-research.md  knowledge-integration.md  research-targets.md
skills/: scout-briefing.md  scout-consolidation.md  scout-dream.md  scout-research.md
templates/: cron-entry.tmpl  launchd-plist.tmpl  run-dreaming.sh.tmpl  run-research.sh.tmpl  run-scout.sh.tmpl  scout-config.yaml.tmpl
templates/action-items/: render.py  watch.sh.tmpl
templates/docs/: Wishlist-done.md.tmpl  Wishlist-in-progress.md.tmpl  Wishlist.md.tmpl
templates/hooks/: kb-pre-filter.sh.tmpl
templates/knowledge-base/: channels.md.tmpl  knowledge-base.md.tmpl  people.md.tmpl  research-queue.md.tmpl
templates/knowledge-base/ontology/: parser.py  schema.yaml.tmpl
templates/knowledge-base/projects/: projects.md.tmpl
templates/scripts/: budget-check.sh.tmpl  cc-session-cache.sh.tmpl  heartbeat.sh.tmpl  pre-session-data.sh.tmpl  rate-limit-detect.sh.tmpl  write-session-cost.sh.tmpl
