[project]
name = "scout-engine"
version = "0.4.0"
description = "Scout engine: CLI, hooks, runners, and Python library for the Scout productivity system."
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Jordan Burger"}]
license = {text = "MIT"}

dependencies = [
    "typer>=0.12",
    "pyyaml>=6.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
full = [
    "textual>=0.63",
    "rich>=13.7",
    "watchdog>=4.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.5",
    "types-PyYAML",
]

[project.scripts]
scoutctl = "scout.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scout"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
# render.py contains embedded CSS/HTML template strings with unavoidable long lines
"scout/action_items/render.py" = ["E501"]
# CLI files use typer.Argument/typer.Option in function defaults — standard Typer idiom, B008 is a false positive here
"scout/action_items/cli.py" = ["B008"]
"scout/cli.py" = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_ignores = true

# Textual is in the [full] extras, not [dev]. CI lint runs in a [dev]-only
# environment to keep that job lean, so its mypy invocation cannot resolve
# textual.* — silence those imports rather than installing the heavier
# extra just for type-checking.
[[tool.mypy.overrides]]
module = ["textual", "textual.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"
markers = [
    "perf: performance tests (may be skipped in fast CI runs)",
    "concurrency: tests involving multiple processes/threads",
    "slow: tests taking > 1 second",
]
